Card top part not showing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ body {
       .card__side--back-2 {
         background-image: linear-gradient(to right bottom, #55c57a, #28b485); }
       .card__side--back-3 {
-        background-image: linear-gradient(to right bottom, #ff7730, #ffb900); }
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -346,6 +346,14 @@ body {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -411,5 +419,5 @@ body {
   margin-top: -10rem; }
 
 .section-stories {
-  background-color: #f7f7f7;
+  position: relative;
   padding: 15rem 0; }
