--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,7 +30,8 @@
 }
 
 .section-stories{
-    background-color: $color-grey-light-1;
+    // background-color: $color-grey-light-1;
+    position: relative;
     padding: 15rem 0;
     
 }
